--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,29 @@
     <div class="container header__inner">
         <div class="logo">
             <img class="logo__icon" src="/logo-rumtibet.svg" alt="logo-rumtibet">
-            <img class="logo__text" src="/logo-name.svg" alt="logo-name">
+            <span class="logo__text">{{companyName}}</span>
         </div>
         <div class="header__actions">
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a class="nav__link" href="#">Главная</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Про гида</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Программа тура</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Стоимость</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Блог</a></li>
-                    <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Главная</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Про гида</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Программа тура</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Стоимость</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Блог</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Контакты</a>
+                    </li>
                 </ul>
             </nav>
             <button class="btn">Консультация</button>
