--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    color: var(--white-color)
+    color: var(--white-color);
 }
 
 :root {
