--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,11 @@
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    color: var(--white-color);
 }
 
 :root {
-  --black-color: #000000;
+  --black-color: #18121E;
   --white-color: #FFFFFF;
   --secondary-color: #1A3E3E;
+  --yellow-color: #F2BE22;
 }
