--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,174 @@
-<header class="header">
-    <div class="container header__inner">
-        <div class="logo">
-            <img class="logo__icon" src="/logo-rumtibet.svg" alt="logo-rumtibet">
-            <span class="logo__text">{{companyName}}</span>
-        </div>
-        <div class="header__actions">
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Главная</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Про гида</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Программа тура</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Стоимость</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Блог</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <button class="btn">Консультация</button>
-        </div>
+<div class="page-loader" [hidden]="!isLoading" aria-label="Загрузка страницы">
+    <div class="page-loader__inner">
+        <img class="page-loader__icon" src="/loading-icon.svg" alt="loading-icon" width="50" height="50">
+        <span class="page-loader__text">Загрузка...</span>
     </div>
-</header>
-<main id="main">
-    <section class="hero">
-        <div class="container hero__inner">
-            <h1 class="hero__tittle">Насладись прогулкой в горах <br> с командой единомышленников</h1>
-            <form class="search" action="#">
-                <div class="search__grid">
-                    <label class="field">
-                        <div class="field__control">
-                            <select class="field__input field__select" name="location" required>
-                                <option value="" disabled selected>Локация для тура</option>
-                                <option value="altai">Алтай</option>
-                                <option value="caucasus">Кавказ</option>
-                                <option value="baikal">Байкал</option>
-                            </select>
-                            <img class="field__icon" src="/arrow-down.svg" alt="">
+</div>
+<div class="page" [hidden]="isLoading">
+    <header class="header">
+        <div class="container header__inner">
+            <div class="logo">
+                <img class="logo__icon" src="/logo-rumtibet.svg" alt="logo-rumtibet">
+                <span class="logo__text">{{companyName}}</span>
+            </div>
+            <div class="header__actions">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Главная</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Про гида</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Программа тура</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Стоимость</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Блог</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__cta">
+                    <button class="btn" type="button">Консультация</button>
+                    <div class="header__switch">
+                        <button class="btn btn--ghost" type="button" (click)="toggleHeaderWidget()">{{ showClock ? 'Показать кликер' : 'Показать время' }}</button>
+                        <div class="header__clock" aria-label="Текущая дата и время" [hidden]="!showClock">{{ currenrDateName }}</div>
+                        <div class="header__counter" aria-label="Счетчик кликов" [hidden]="showClock">
+                            <button class="counter__btn" type="button" (click)="decrease()" [disabled]="clickCount === 0" aria-label="Уменьшить">−</button>
+                            <span class="counter__value" aria-label="Текущее значение">{{ clickCount }}</span>
+                            <button class="counter__btn" type="button" (click)="increase()" aria-label="Увеличить">+</button>
                         </div>
-                        <span class="field__hint">выберите из списка</span>
-                    </label>
-                    <label class="field">
-                        <div class="field__control">
-                            <input class="field__input" type="date" name="date">
-                            <img class="field__icon" src="/formkit-date.svg" alt="">
-                        </div>
-                        <span class="field__hint">укажите диапазон</span>
-                    </label>
-                    <label class="field">
-                        <div class="field__control">
-                            <select class="field__input field__select" name="people" required>
-                                <option value="4" selected>Участники</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8+</option>
-                            </select>
-                            <img class="field__icon" src="/arrow-down.svg" alt="">
-                        </div>
-                        <span class="field__hint">минимум 4 человека</span>
-                    </label>
-                    <div class="search__submit">
-                        <button class="btn btn--light" type="submit">Найти программу</button>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
-    </section>
-</main>
+    </header>
+    <main id="main">
+        <section class="hero">
+            <div class="container hero__inner">
+                <h1 class="hero__tittle">Насладись прогулкой в горах <br> с командой единомышленников</h1>
+                <form class="search" #searchForm="ngForm" (ngSubmit)="onSearch()" action="#">
+                    <div class="search__grid">
+                        <label class="field">
+                            <div class="field__control">
+                                <select class="field__input field__select" name="location" required [(ngModel)]="location">
+                                    <option value="" disabled>Локация для тура</option>
+                                    <option value="altai">Алтай</option>
+                                    <option value="caucasus">Кавказ</option>
+                                    <option value="baikal">Байкал</option>
+                                </select>
+                                <img class="field__icon" src="/arrow-down.svg" alt="">
+                            </div>
+                            <span class="field__hint">выберите из списка</span>
+                        </label>
+                        <label class="field">
+                            <div class="field__control">
+                                <input class="field__input" type="date" name="date" required [(ngModel)]="date">
+                                <img class="field__icon" src="/formkit-date.svg" alt="">
+                            </div>
+                            <span class="field__hint">укажите диапазон</span>
+                        </label>
+                        <label class="field">
+                            <div class="field__control">
+                                <select class="field__input field__select" name="people" required [(ngModel)]="people">
+                                    <option value="" disabled>Участники</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8+</option>
+                                </select>
+                                <img class="field__icon" src="/arrow-down.svg" alt="">
+                            </div>
+                            <span class="field__hint">выберите из списка</span>
+                        </label>
+                        <div class="search__submit">
+                            <button class="btn btn--light" type="submit" [disabled]="searchForm.invalid">Найти программу</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="live">
+                <label class="live__field">
+                    <input
+                        class="live__input"
+                        type="text"
+                        placeholder="Пиши сюда…"
+                        [ngModel]="liveText" (ngModelChange)="liveText = $event" name="liveText"
+                    />
+                </label>
+                <span class="live__value" aria-label="Введённый текст">{{ liveText }}</span>
+            </div>
+        </section>
+        <section class="tour-about">
+            <div class="tour-about__container">
+                <div class="tour-about__media">
+                    <img
+                        class="tour-about__preview tour-about__preview--back"
+                        src="/mountains-peaks.png"
+                        alt="Превью видео: горные пики в облаках"
+                        width="350"
+                        height="400"
+                    >
+                    <img
+                        class="tour-about__preview tour-about__preview--front"
+                        src="/mountain-valley.png"
+                        alt="Превью видео: горная долина и домик"
+                        width="350"
+                        height="400"
+                    >
+                    <button class="tour-about__play" type="button" aria-label="Смотреть видео">
+                        <img src="/play-icon.svg" alt="play-icon" width="50" height="50">
+                    </button>
+                </div>
+                <div class="tour-about__content">
+                    <span class="tour-about__eyebrow">о нашем походе</span>
+                    <h2 class="tour-about__title">Исследуйте все горные массивы мира вместе с нами</h2>
+                    <p class="tour-about__text">Его корни уходят в один фрагмент классической латыни 45 года н.э., 
+                        то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, 
+                        штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur"и занялся его поисками 
+                        в классической латинской литературе.</p>
+                    <button class="tour-about__button" type="button">Программа тура</button>
+                </div>
+            </div>
+        </section>
+        <section class="offer">
+            <div class="offer__container">
+                <div class="offer__content">
+                    <span class="offer__eyebrow">наше предложение</span>
+                    <h2 class="offer__title">Лучшие программы для тебя</h2>
+    
+                    <p class="offer__text">Его корни уходят в один фрагмент классической латыни 45 года н.э., 
+                        то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа.</p>
+                    <ul class="offer__list">
+                        @for (item of offers; track item.id) {
+                            <li class="offer__item">
+                                <div class="offer__icon" [class]="'offer__icon offer__icon--' + item.iconModifier">
+                                    <img [src]="item.iconSrc" [alt]="item.iconAlt" width="36" height="36">
+                                </div>
+    
+                                <div class="offer__item-body">
+                                    <h3 class="offer__item-title">{{ item.title }}</h3>
+                                    <p class="offer__item-text">{{ item.text }}</p>
+                                </div>
+                            </li>
+                        }
+                    </ul>
+                    <button class="offer__button" type="button">Стоимость программ</button>
+                </div>
+                <div class="offer__gallery">
+                    <img class="offer__photo offer__photo--tl" src="/hand-with-coffee.png" alt="hand-with-coffee">
+                    <img class="offer__photo offer__photo--tr" src="/man.png" alt="man">
+                    <img class="offer__photo offer__photo--bl" src="/man-and-snowmobile.png" alt="man-and-snowmobile">
+                    <img class="offer__photo offer__photo--br" src="/mountainous-terrain.png" alt="mountainous-terrain">
+                </div>
+            </div>
+        </section>
+    </main>
+</div>
